# colloquium-protocol-creator

./: README.md  environment.yml  latex_generation.py  main.py  main_project.py  main_review.py  orchestrator.py  pyproject.toml  requirements.txt  utils.py
colloquium_creator/: __init__.py  latex_generation.py  llm_interface.py  pdf_processing.py  utils.py
colloquium_pipeline/: __init__.py  __main__.py  cli.py  orchestrator.py
project_creator/: __init__.py  latex_generation.py  llm_interface.py
project_pipeline/: __init__.py  cli.py  orchestrator.py
review_creator/: md_generator.py
review_pipeline/: __init__.py  orchestrator.py
