[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colloquium-protocol-creator"
version = "0.2.0"
description = "Create colloquium protocol letters from thesis PDFs (annotation extraction, comment rewriting, LaTeX generation)."
authors = [{name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pypdf>=4.0.0",
    "docling-parse>=0.2.0",
    "docling-core>=0.2.0",
    "llm-client @ git+https://github.com/dgaida/llm_client.git",
]

[project.scripts]
colloquium-protocol-creator = "colloquium_pipeline.cli:main"
project-grading-letter = "project_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]
